manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  labels:
    app.kubernetes.io/name: ${SERVICE_NAME}
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: web-port
      protocol: TCP
      name: web
  selector:
    app.kubernetes.io/name: ${SERVICE_NAME}
