manifests/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}-ingress
  labels:
    app.kubernetes.io/name: ${SERVICE_NAME}
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - ${APP_DOMAIN}
      secretName: ${SERVICE_NAME}-tls
  rules:
    - host: ${APP_DOMAIN}
      http:
        paths:
          - path: /
            backend:
              serviceName: ${SERVICE_NAME}
              servicePort: 8000
